Fin page d'acceuil

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>blogueino</title>
 </head>
 <body>
+  <h1>BLOGUEINO</h1>
+  <ul>
+    <li>home</li>
+    <li>mes article</li>
+    <li>apropos</li>
+    <li>contacter moi</li>
+
+  </ul>
+  <h2> WELCOME IN MY BLOG</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos ab sed soluta veniam quas cum ipsum iste laboriosam aliquam? Cupiditate doloremque, assumenda omnis illum repellat error tempora exercitationem fuga maiores.</p>  
+  <img src="download.jpg" width="500px">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio earum laudantium neque nesciunt unde, velit dolores sed dolore, eum dignissimos pariatur quia et, commodi voluptate mollitia aperiam placeat perferendis ducimus.
+  </p>
+  
   
 </body>
 </html>
