--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
   <title>blogueino me contacter</title>
 </head>
 <body>
-  <input type="text" name="NAME:" value="type name">
-  <input type="text" name="E-MAIL:" value="TYPE YOUR EMAIL">
-  <textarea name="MESSAGE:" cols="80" rows="7" >type here</textarea>
-<input type="submit" name="submit" value="envoyer">
-
+  <input type="text" name="NAME:" value="type name"><br>
+  <input type="text" name="E-MAIL:" value="TYPE YOUR EMAIL"><br>
+  <textarea name="MESSAGE:" cols="80" rows="7" >type here</textarea><br>
+<input type="submit" name="submit" value="send"> <br>
+<a href="index.html" target="_blank"><button>go back</button></a>
 
   
 </body>
