--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>blogueino</title>
 </head>
+
 <body>
   <h1>BLOGUEINO</h1>
   <ul>
-    <li>home</li>
-    <li>mes article</li>
-    <li>apropos</li>
-    <li>contacter moi</li>
+    <li>
+      <h1>home</h1>
+    </li>
+    <li>
+      <h2>mes article</h2>
+      <a href="articles.html" target="_blank"><button>click here</button></a>
+    </li>
+    <li>
+      <h2>apropos</h2>
+      <a href="apropos.html" target="_blank"><button>click here</button></a>
+    </li>
+    <li>
+      <h2>contacter moi</h2>
+      <a href="contact.html" target="_blank"><button>click here</button></a>
+
+    </li>
 
   </ul>
   <h2> WELCOME IN MY BLOG</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos ab sed soluta veniam quas cum ipsum iste laboriosam aliquam? Cupiditate doloremque, assumenda omnis illum repellat error tempora exercitationem fuga maiores.</p>  
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos ab sed soluta veniam quas cum ipsum iste laboriosam
+    aliquam? Cupiditate doloremque, assumenda omnis illum repellat error tempora exercitationem fuga maiores.</p>
   <img src="download.jpg" width="500px">
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio earum laudantium neque nesciunt unde, velit dolores sed dolore, eum dignissimos pariatur quia et, commodi voluptate mollitia aperiam placeat perferendis ducimus.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio earum laudantium neque nesciunt unde, velit dolores
+    sed dolore, eum dignissimos pariatur quia et, commodi voluptate mollitia aperiam placeat perferendis ducimus.
   </p>
-  
-  
+
+
 </body>
+
 </html>
