--- a/articles.html
+++ b/articles.html
@@ -26,7 +26,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sed, voluptatem fugiat at recusandae ratione consequuntur libero dolorum aperiam iure, deserunt reprehenderit quasi doloremque. Ea voluptatibus vel dolorum in et.
     </p>
-    
+    <a href="index.html" target="_blank"><button>go back</button></a>
 
 
 </body>
