--- a/articles.html
+++ b/articles.html
@@ -8,6 +8,22 @@
 </head>
 
 <body>
+  <style>
+    
+    h1{
+      color: rgb(230, 19, 54);
+      size-adjust: 30px;
+      padding-left: 20ch;
+    
+    }
+    h2{
+      background-color: rgb(179, 78, 179);
+      color: white;
+    }
+    image{
+      padding-left: 0%;
+    }
+  </style>
 
   <h1> mes articles</h1>
   <h2>Html & CSS</h2>
