--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,39 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>blogueino me contacter</title>
 </head>
-<body>
-  <input type="text" name="NAME:" value="type name"><br>
-  <input type="text" name="E-MAIL:" value="TYPE YOUR EMAIL"><br>
-  <textarea name="MESSAGE:" cols="80" rows="7" >type here</textarea><br>
-<input type="submit" name="submit" value="send"> <br>
-<a href="index.html" target="_blank"><button>go back</button></a>
 
-  
+<body>
+  <style>
+    body {
+      top: (50%);
+      left: (50%);
+      transform: translate(30%, 10%);
+    }
+    input{ color: rgb(51, 134, 202);}
+    
+
+    button {
+      color: white;
+      border: none;
+      border-radius: 60px;
+      background-color: rgb(245, 33, 139);
+    }
+    body{
+      background-image: url(Metaverse.png);
+    }
+  </style>
+  <input type="text" name="NAME:" value="type name"><br>
+  <br><br><input type="text" name="E-MAIL:" value="TYPE YOUR EMAIL"><br>
+  <br><br> <textarea name="MESSAGE:" cols="80" rows="7">type here</textarea><br>
+  <input type="submit" name="submit" value="send"> <br>
+  <a href="index.html" target="_blank"><button>go back</button></a>
+
+
 </body>
+
 </html>
