--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
 </head>
 
 <body>
+  <style>
+    body {
+      background-image: url(ae.jpg);
+
+    }
+
+    h1 {
+      color: rgb(207, 194, 194);
+      font-size: 50px;
+    }
+
+    h2 {
+      color: rgb(230, 230, 62);
+      padding: 20px;
+      text-underline-position: below;
+
+    }
+
+    button {
+      background-color: rgb(141, 59, 141);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: rgba(58, 58, 197, 0.89);
+    }
+
+    p {
+      background-color: white;
+      color: rgb(226, 21, 141);
+    }
+  </style>
   <h1>BLOGUEINO</h1>
   <ul>
     <li>
