--- a/apropos.html
+++ b/apropos.html
@@ -8,6 +8,25 @@
 </head>
 
 <body>
+  <style>
+    body{
+      background: url(aes.jpg);
+    }
+    h1{
+      color: rgb(239, 241, 241);
+      background-color: rgb(47, 121, 121);
+    }
+    P{
+      color: white;
+      background-color: rgb(47, 121, 121);
+    }
+    button{
+      background-color: rgb(201, 113, 201);
+      color: white;
+      
+
+    }
+  </style>
   <h1> QUI SUIS-JE</h1>
   <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum tempore ea enim placeat minima vero quia cupiditate
     maiores esse ad velit, repellendus ipsa porro harum fugit. Placeat aperiam quasi velit?
